--- a/style.css
+++ b/style.css
@@ -79,7 +79,7 @@ section{
     display: flex;
     align-items: center;
     padding: 0 9%;
-    background: url("E:/HTML/Manshi Portfolio/img/05.jpg") no-repeat;
+    background: url("img/05.jpg") no-repeat;
     background-size: cover;
     background-position: center;
 }
